--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </ul>
     </header>
 
-    <div class="outer-wrapper">
+    <main class="outer-wrapper">
         <div class="screen flex-center">
             <div class="small-banner">
                 <div class="card">
@@ -181,7 +181,33 @@
                 </div>
             </div>
         </div>
-    </div>
+    </main>
+
+    <footer class="footer padding-sm">
+        <div class="flex-center">
+            <ul class="nav-icons">
+                <li>
+                    <a href="https://github.com/Aditi0505" class="nav-icon" target="_blank">
+                        <i class="fab fa-github"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/aadyaaditi" class="nav-icon" target="_blank">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/aditi-35bba3149/" class="nav-icon" target="_blank">
+                        <i class="fab fa-linkedin-in"></i>
+                    </a>
+                </li>
+            </ul>
+        </div>
+
+        <div class="copyright flex-center">
+            <span class="primary-color padding-sm">&copy; Aditi</span>
+        </div>
+    </footer>
 </body>
 
 </html>
