feat: add login and logout screens

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
         <input type="text" name="search" id="search" placeholder="🔍 Search" />
         <ul class="nav-icons">
             <li>
-                <a href="/screens/Authentication/login.html" class="nav-icon">
+                <a href="/screens/auth/login.html" class="nav-icon">
                     <button class="btn btn-ghost-primary">Login</button>
                 </a>
             </li>
             <li>
-                <a href="" class="nav-icon">
+                <a href="#" class="nav-icon">
                     <div class="badge">
                         <i class="badge-icon fas fa-heart"></i>
                         <span class="display-flex badge-number badge-display">0</span>
@@ -41,7 +41,7 @@
                 </a>
             </li>
             <li>
-                <a href="" class="nav-icon">
+                <a href="#" class="nav-icon">
                     <div class="badge">
                         <i class="badge-icon fas fa-shopping-cart"></i>
                         <span class="display-flex badge-number badge-display">0</span>
@@ -52,7 +52,7 @@
     </header>
 
     <main class="outer-wrapper">
-        <div class="screen flex-center">
+        <section class="screen flex-center">
             <div class="small-banner">
                 <div class="card">
                     <div class="card-inner-container">
@@ -128,14 +128,14 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="image-wrapper screen flex-center">
+        </section>
+        <section class="image-wrapper screen flex-center">
             <div>
                 <h1 class="accent-color text-center">Welcome to The Red Closet!</h1>
                 <img alt="taylor swift" src="/assets/images/taylorSwift.jpg" class="responsive" />
             </div>
-        </div>
-        <div class="screen flex-center">
+        </section>
+        <section class="screen flex-center">
             <div class="card-container-horizontal">
                 <div class="card-inner-container-horizontal">
                     <div class="card-image-horizontal">
@@ -180,10 +180,10 @@
                     <span class="badge-horizontal"><i class="far fa-heart"></i></span>
                 </div>
             </div>
-        </div>
+        </section>
     </main>
 
-    <footer class="footer padding-sm">
+    <footer class="footer padding-sm full-width">
         <div class="flex-center">
             <ul class="nav-icons">
                 <li>
@@ -201,11 +201,10 @@
                         <i class="fab fa-linkedin-in"></i>
                     </a>
                 </li>
+                <li class="primary-color">
+                    &copy; Aditi
+                </li>
             </ul>
-        </div>
-
-        <div class="copyright flex-center">
-            <span class="primary-color padding-sm">&copy; Aditi</span>
         </div>
     </footer>
 </body>
