--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="keywords" content="HTML, CSS, JavaScript" />
+    <meta name="keywords" content="HTML, CSS" />
     <meta name="author" content="Aditi" />
-    <meta name="description" cotent="Component Library for styling purpose." />
+    <meta name="description" cotent="E-commerce app for albums." />
     <link rel="icon" type="image/x-icon" href="./assets//images/favicon-16x16.png" />
     <title>The Red Closet | Home</title>
     <link rel="stylesheet" href="styles.css" />
