--- a/screens/auth/signup.html
+++ b/screens/auth/signup.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="HTML, CSS, JavaScript" />
+    <meta name="keywords" content="HTML, CSS" />
     <meta name="author" content="Aditi" />
-    <meta name="description" cotent="Component Library for styling purpose." />
+    <meta name="description" cotent="E-commerce app for albums." />
     <link rel="icon" type="image/x-icon" href="./assets//images/favicon-16x16.png" />
     <title>The Red Closet | Signup</title>
     <link rel="stylesheet" href="/styles.css" />
@@ -28,7 +28,7 @@
         <input type="text" name="search" id="search" placeholder="🔍 Search" />
         <ul class="nav-icons">
             <li>
-                <a href="/screens/Authentication/login.html" class="nav-icon">
+                <a href="/screens/auth/login.html" class="nav-icon">
                     <button class="btn btn-ghost-primary">Login</button>
                 </a>
             </li>
