--- a/screens/cart/index.html
+++ b/screens/cart/index.html
@@ -124,6 +124,31 @@
         </section>
     </main>
 
+    <footer class="footer padding-sm full-width">
+        <div class="flex-center">
+            <ul class="nav-icons">
+                <li>
+                    <a href="https://github.com/Aditi0505" class="nav-icon" target="_blank">
+                        <i class="fab fa-github"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/aadyaaditi" class="nav-icon" target="_blank">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/aditi-35bba3149/" class="nav-icon" target="_blank">
+                        <i class="fab fa-linkedin-in"></i>
+                    </a>
+                </li>
+                <li class="primary-color">
+                    &copy; Aditi
+                </li>
+            </ul>
+        </div>
+    </footer>
+
 </body>
 
 </html>
