--- a/screens/filters/index.html
+++ b/screens/filters/index.html
@@ -58,7 +58,7 @@
                     <li class="list-item">
                         <div>
                             <span class="ft-bolder">Filters</span>
-                            <span class="margin-left underlined">Clear</span>
+                            <span class="margin-left underlined"><button class="btn btn-link">Clear</button></span>
                         </div>
                     </li>
                     <li class="list-item">
