--- a/screens/cart/index.html
+++ b/screens/cart/index.html
@@ -33,7 +33,7 @@
                 </a>
             </li>
             <li>
-                <a href="" class="nav-icon">
+                <a href="/screens/wishlist/index.html" class="nav-icon">
                     <div class="badge">
                         <i class="badge-icon fas fa-heart"></i>
                         <span class="display-flex badge-number badge-display">0</span>
@@ -41,7 +41,7 @@
                 </a>
             </li>
             <li>
-                <a href="" class="nav-icon">
+                <a href="/screens/cart/index.html" class="nav-icon">
                     <div class="badge">
                         <i class="badge-icon fas fa-shopping-cart"></i>
                         <span class="display-flex badge-number badge-display">0</span>
