--- a/screens/product-listing/index.html
+++ b/screens/product-listing/index.html
@@ -33,7 +33,7 @@
                 </a>
             </li>
             <li>
-                <a href="" class="nav-icon">
+                <a href="/screens/wishlist/index.html" class="nav-icon">
                     <div class="badge">
                         <i class="badge-icon fas fa-heart"></i>
                         <span class="display-flex badge-number badge-display">0</span>
@@ -41,7 +41,7 @@
                 </a>
             </li>
             <li>
-                <a href="" class="nav-icon">
+                <a href="/screens/cart/index.html" class="nav-icon">
                     <div class="badge">
                         <i class="badge-icon fas fa-shopping-cart"></i>
                         <span class="display-flex badge-number badge-display">0</span>
@@ -58,7 +58,7 @@
                     <li class="list-item">
                         <div>
                             <span class="ft-bolder">Filters</span>
-                            <span class="margin-left underlined">Clear</span>
+                            <span class="margin-left underlined"><button class="btn btn-link">Clear</button></span>
                         </div>
                     </li>
                     <li class="list-item">
