refactor: added links to images, added dismiss card to wishlist

--- a/screens/wishlist/index.html
+++ b/screens/wishlist/index.html
@@ -94,7 +94,8 @@
                     <button class="btn-action-horizontal-hide secondary">
                         Remove from wishlist
                     </button>
-                    <span class="card-badge flex-center"><i class="fas fa-heart"></i></span>
+                    <span class="dismiss flex-center"><button class="card-btn-close">
+                            <i class="close fas fa-times-circle"></i></button></span>
                 </div>
             </div>
             <div class="card">
