--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                 <div class="card">
                     <div class="card-inner-container">
                         <div class="card-image-overlay opacity">
-                            <img src="/assets/images/Album.jpg" alt="Taylor Swift" class="img" />
+                            <a href="./screens/product-listing/index.html"><img src="/assets/images/Album.jpg"
+                                    alt="Taylor Swift" class="img" /></a>
                         </div>
                         <div class="hide card-body-overlay opacity">
                             <div class="card-title">Orange Hat</div>
@@ -82,7 +83,9 @@
                 <div class="card">
                     <div class="card-inner-container">
                         <div class="card-image-overlay opacity">
-                            <img src="/assets//images/Concert.jpg" alt="Taylor Swift" class="img" />
+                            <a href="./screens/product-listing/index.html"> <img src="/assets//images/Concert.jpg"
+                                    alt="Taylor Swift" class="img" />
+                            </a>
                         </div>
                         <div class="hide card-body-overlay opacity">
                             <div class="card-title">Orange Hat</div>
@@ -107,7 +110,8 @@
                 <div class="card">
                     <div class="card-inner-container">
                         <div class="card-image-overlay opacity">
-                            <img src="/assets/images/Album.jpg" alt="Taylor Swift" class="img" />
+                            <a href="./screens/product-listing/index.html"> <img src="/assets/images/Album.jpg"
+                                    alt="Taylor Swift" class="img" /></a>
                         </div>
                         <div class="hide card-body-overlay opacity">
                             <div class="card-title">Orange Hat</div>
