refactor: changed footer icon size and home page cta button

--- a/index.html
+++ b/index.html
@@ -150,7 +150,8 @@
                         <div class="card-desc-horizontal">
                             Check out the latest Vinyls and grab this limited edition.
                         </div>
-                        <a href="./screens/product-listing/index.html"><i class="fa fa-arrow-right"></i></a>
+                        <a href="./screens/product-listing/index.html"><i
+                                class="fa fa-arrow-right btn btn-icon"></i></a>
                     </div>
                     <div class="hide-overlay">Women</div>
                 </div>
@@ -172,7 +173,8 @@
                         <div class="card-desc-horizontal">
                             Check out the latest album and grab this limited edition.
                         </div>
-                        <a href="./screens/product-listing/index.html"><i class="fa fa-arrow-right"></i></a>
+                        <a href="./screens/product-listing/index.html"><i
+                                class="fa fa-arrow-right btn btn-icon"></i></a>
                     </div>
                     <div class="hide-overlay">Women</div>
                 </div>
@@ -192,20 +194,20 @@
             <ul class="nav-icons">
                 <li>
                     <a href="https://github.com/Aditi0505" class="nav-icon" target="_blank">
-                        <i class="fab fa-github"></i>
+                        <i class="fab fa-github text-sm"></i>
                     </a>
                 </li>
                 <li>
                     <a href="https://twitter.com/aadyaaditi" class="nav-icon" target="_blank">
-                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-twitter text-sm"></i>
                     </a>
                 </li>
                 <li>
                     <a href="https://www.linkedin.com/in/aditi-35bba3149/" class="nav-icon" target="_blank">
-                        <i class="fab fa-linkedin-in"></i>
+                        <i class="fab fa-linkedin-in text-sm"></i>
                     </a>
                 </li>
-                <li class="primary-color">
+                <li class="primary-color text-sm">
                     &copy; Aditi
                 </li>
             </ul>
