--- a/screens/cart/index.html
+++ b/screens/cart/index.html
@@ -64,7 +64,7 @@
                             $2000 <span class="striked">3990</span>
                         </div>
                         <div class="card-desc-horizontal">50% off</div>
-                        <div class="flex-center">Quantity:
+                        <div class="flex-center text-sm dark-shade">Quantity:
                             <button class="btn btn-icon"> <i class="fas fa-minus"></i></button>
                             <span><input type="number" name="quantity" id="quantity"
                                     class="inputBox custom-width  text-center"></span>
@@ -129,20 +129,20 @@
             <ul class="nav-icons">
                 <li>
                     <a href="https://github.com/Aditi0505" class="nav-icon" target="_blank">
-                        <i class="fab fa-github"></i>
+                        <i class="fab fa-github text-sm"></i>
                     </a>
                 </li>
                 <li>
                     <a href="https://twitter.com/aadyaaditi" class="nav-icon" target="_blank">
-                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-twitter text-sm"></i>
                     </a>
                 </li>
                 <li>
                     <a href="https://www.linkedin.com/in/aditi-35bba3149/" class="nav-icon" target="_blank">
-                        <i class="fab fa-linkedin-in"></i>
+                        <i class="fab fa-linkedin-in text-sm"></i>
                     </a>
                 </li>
-                <li class="primary-color">
+                <li class="primary-color text-sm">
                     &copy; Aditi
                 </li>
             </ul>
