--- a/screens/product-listing/index.html
+++ b/screens/product-listing/index.html
@@ -349,20 +349,20 @@
             <ul class="nav-icons">
                 <li>
                     <a href="https://github.com/Aditi0505" class="nav-icon" target="_blank">
-                        <i class="fab fa-github"></i>
+                        <i class="fab fa-github text-sm"></i>
                     </a>
                 </li>
                 <li>
                     <a href="https://twitter.com/aadyaaditi" class="nav-icon" target="_blank">
-                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-twitter text-sm"></i>
                     </a>
                 </li>
                 <li>
                     <a href="https://www.linkedin.com/in/aditi-35bba3149/" class="nav-icon" target="_blank">
-                        <i class="fab fa-linkedin-in"></i>
+                        <i class="fab fa-linkedin-in text-sm"></i>
                     </a>
                 </li>
-                <li class="primary-color">
+                <li class="primary-color text-sm">
                     &copy; Aditi
                 </li>
             </ul>
