feat: added mobile responsiveness

--- a/screens/product-listing/index.html
+++ b/screens/product-listing/index.html
@@ -10,8 +10,8 @@
     <meta name="description" cotent="E-commerce app for albums." />
     <link rel="icon" type="image/x-icon" href="./assets//images/favicon-16x16.png" />
     <title>The Red Closet | Products</title>
-    <link rel="stylesheet" href="/styles.css" />
     <link rel="stylesheet" href="https://redazzleui.netlify.app/Components/redazzle.css" />
+    <link rel="stylesheet" href="/styles.css" />
 </head>
 
 <body>
@@ -53,7 +53,7 @@
 
     <aside class="outer-wrapper">
         <section class="screen filter-wrapper">
-            <div class="flex-column  margin-right">
+            <div class="flex-column margin-right">
                 <ul class="list-style-none flex-column">
                     <li class="list-item">
                         <div>
@@ -139,6 +139,7 @@
             </div>
         </section>
     </aside>
+
 
     <main class="outer-wrapper flex-spbt product-listing">
         <!-- badge type icon -->
@@ -341,6 +342,14 @@
                     <span class="card-badge flex-center"><i class="far fa-heart"></i></span>
                 </div>
             </div>
+        </div>
+        <div class="filter-buttons">
+            <button class="btn-action-horizontal filter-button secondary">
+                Sort
+            </button>
+            <button class="btn-action-horizontal filter-button secondary">
+                Filter
+            </button>
         </div>
     </main>
 
