refactor: corrected content spelling

--- a/screens/cart/index.html
+++ b/screens/cart/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="HTML, CSS" />
     <meta name="author" content="Aditi" />
-    <meta name="description" cotent="E-commerce app for albums." />
+    <meta name="description" content="E-commerce app for albums." />
     <link rel="icon" type="image/x-icon" href="./assets//images/favicon-16x16.png" />
     <title>The Red Closet | Cart</title>
     <link rel="stylesheet" href="https://redazzleui.netlify.app/Components/redazzle.css" />
