fix: remove flex display and added hide class; footer padding size

--- a/screens/cart/index.html
+++ b/screens/cart/index.html
@@ -124,7 +124,7 @@
         </section>
     </main>
 
-    <footer class="footer padding-sm full-width">
+    <footer class="footer padding-xs full-width">
         <div class="flex-center">
             <ul class="nav-icons">
                 <li>
