--- a/screens/filters/index.html
+++ b/screens/filters/index.html
@@ -140,7 +140,7 @@
         </section>
     </aside>
 
-    <footer class="footer padding-sm full-width">
+    <footer class="footer padding-xs full-width">
         <div class="flex-center">
             <ul class="nav-icons">
                 <li>
