--- a/screens/product-listing/index.html
+++ b/screens/product-listing/index.html
@@ -157,7 +157,7 @@
                 </div>
                 <div class="icons">
                     <button class="btn-primary btn flex-center full-width padding-xs margin">Go to Cart</button>
-                    <button class="btn-action flex-center hide secondary">
+                    <button class="btn-action hide secondary">
                         Move to Cart
                     </button>
                     <button class="btn-action-horizontal-hide secondary">
@@ -179,7 +179,7 @@
                 </div>
                 <div class="icons">
                     <button class="btn-secondary  btn flex-center full-width padding-xs margin">Move to Cart</button>
-                    <button class="btn-action flex-center hide secondary">
+                    <button class="btn-action hide secondary">
                         Move to Cart
                     </button>
                     <button class="btn-action-horizontal-hide secondary">
@@ -201,7 +201,7 @@
                 </div>
                 <div class="icons">
                     <button class="btn-secondary btn flex-center full-width padding-xs margin">Move to Cart</button>
-                    <button class="btn-action flex-center hide secondary">
+                    <button class="btn-action hide secondary">
                         Move to Cart
                     </button>
                     <button class="btn-action-horizontal-hide secondary">
@@ -223,7 +223,7 @@
                 </div>
                 <div class="icons">
                     <button class="btn-secondary btn flex-center full-width padding-xs margin">Move to Cart</button>
-                    <button class="btn-action flex-center hide secondary">
+                    <button class="btn-action hide secondary">
                         Move to Cart
                     </button>
                     <button class="btn-action-horizontal-hide secondary">
@@ -245,7 +245,7 @@
                 </div>
                 <div class="icons">
                     <button class="btn-secondary btn flex-center full-width padding-xs margin">Move to Cart</button>
-                    <button class="btn-action flex-center hide secondary">
+                    <button class="btn-action hide secondary">
                         Move to Cart
                     </button>
                     <button class="btn-action-horizontal-hide secondary">
@@ -267,7 +267,7 @@
                 </div>
                 <div class="icons">
                     <button class="btn-secondary btn flex-center full-width padding-xs margin">Move to Cart</button>
-                    <button class="btn-action flex-center hide secondary">
+                    <button class="btn-action  hide secondary">
                         Move to Cart
                     </button>
                     <button class="btn-action-horizontal-hide secondary">
@@ -289,7 +289,7 @@
                 </div>
                 <div class="icons">
                     <button class="btn-secondary btn flex-center full-width padding-xs margin">Move to Cart</button>
-                    <button class="btn-action flex-center hide secondary">
+                    <button class="btn-action hide secondary">
                         Move to Cart
                     </button>
                     <button class="btn-action-horizontal-hide secondary">
@@ -311,7 +311,7 @@
                 </div>
                 <div class="icons">
                     <button class="btn-secondary btn flex-center full-width padding-xs margin">Move to Cart</button>
-                    <button class="btn-action flex-center hide secondary">
+                    <button class="btn-action hide secondary">
                         Move to Cart
                     </button>
                     <button class="btn-action-horizontal-hide secondary">
@@ -333,7 +333,7 @@
                 </div>
                 <div class="icons">
                     <button class="btn-secondary btn flex-center full-width padding-xs margin">Move to Cart</button>
-                    <button class="btn-action flex-center hide secondary">
+                    <button class="btn-action hide secondary">
                         Move to Cart
                     </button>
                     <button class="btn-action-horizontal-hide secondary">
@@ -353,7 +353,7 @@
         </div>
     </main>
 
-    <footer class="footer padding-sm full-width">
+    <footer class="footer padding-xs full-width">
         <div class="flex-center">
             <ul class="nav-icons">
                 <li>
