--- a/screens/wishlist/index.html
+++ b/screens/wishlist/index.html
@@ -66,7 +66,7 @@
                 </div>
                 <div class="icons">
                     <button class="btn-secondary btn flex-center full-width padding-xs margin">Move to Cart</button>
-                    <button class="btn-action flex-center hide secondary">
+                    <button class="btn-action hide secondary">
                         Move to Cart
                     </button>
                     <button class="btn-action-horizontal-hide secondary">
@@ -87,8 +87,8 @@
                     <div class="hide-overlay">Women</div>
                 </div>
                 <div class="icons">
-                    <button class="btn-secondary  btn flex-center full-width padding-xs margin">Move to Cart</button>
-                    <button class="btn-action flex-center hide secondary">
+                    <button class="btn-secondary btn flex-center full-width padding-xs margin">Move to Cart</button>
+                    <button class="btn-action hide secondary">
                         Move to Cart
                     </button>
                     <button class="btn-action-horizontal-hide secondary">
@@ -111,7 +111,7 @@
                 </div>
                 <div class="icons">
                     <button class="btn-secondary btn flex-center full-width padding-xs margin">Move to Cart</button>
-                    <button class="btn-action flex-center hide secondary">
+                    <button class="btn-action hide secondary">
                         Move to Cart
                     </button>
                     <button class="btn-action-horizontal-hide secondary">
@@ -133,7 +133,7 @@
                 </div>
                 <div class="icons">
                     <button class="btn-secondary btn flex-center full-width padding-xs margin">Move to Cart</button>
-                    <button class="btn-action flex-center hide secondary">
+                    <button class="btn-action hide secondary">
                         Move to Cart
                     </button>
                     <button class="btn-action-horizontal-hide secondary">
@@ -155,7 +155,7 @@
                 </div>
                 <div class="icons">
                     <button class="btn-secondary btn flex-center full-width padding-xs margin">Move to Cart</button>
-                    <button class="btn-action flex-center hide secondary">
+                    <button class="btn-action hide secondary">
                         Move to Cart
                     </button>
                     <button class="btn-action-horizontal-hide secondary">
@@ -177,7 +177,7 @@
                 </div>
                 <div class="icons">
                     <button class="btn-secondary btn flex-center full-width padding-xs margin">Move to Cart</button>
-                    <button class="btn-action flex-center hide secondary">
+                    <button class="btn-action hide secondary">
                         Move to Cart
                     </button>
                     <button class="btn-action-horizontal-hide secondary">
@@ -199,7 +199,7 @@
                 </div>
                 <div class="icons">
                     <button class="btn-secondary btn flex-center full-width padding-xs margin">Move to Cart</button>
-                    <button class="btn-action flex-center hide secondary">
+                    <button class="btn-action hide secondary">
                         Move to Cart
                     </button>
                     <button class="btn-action-horizontal-hide secondary">
@@ -221,7 +221,7 @@
                 </div>
                 <div class="icons">
                     <button class="btn-secondary btn flex-center full-width padding-xs margin">Move to Cart</button>
-                    <button class="btn-action flex-center hide secondary">
+                    <button class="btn-action hide secondary">
                         Move to Cart
                     </button>
                     <button class="btn-action-horizontal-hide secondary">
@@ -232,7 +232,7 @@
             </div>
         </section>
     </main>
-    <footer class="footer padding-sm full-width">
+    <footer class="footer padding-xs full-width">
         <div class="flex-center">
             <ul class="nav-icons">
                 <li>
