--- a/screens/auth/signup.html
+++ b/screens/auth/signup.html
@@ -97,7 +97,7 @@
         </section>
     </main>
 
-    <footer class="footer padding-sm full-width">
+    <footer class="footer padding-xs full-width">
         <div class="flex-center">
             <ul class="nav-icons">
                 <li>
